bpo-39209: Manage correctly multi-line tokens in interactive mode (GH-17860)